log

Thu 14 Mar 2024 08:30:51 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
8d9dc3a
Thu 14 Mar 2024 08:31:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
82a5962
Thu 14 Mar 2024 08:34:40 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
6895899
Thu 14 Mar 2024 08:35:05 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
056efd1
Thu 14 Mar 2024 08:37:16 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0; i < size / 2; i++)
      | ^~~
exercises.c:37:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0; i < size / 2; i++)
      |                   ^
exercises.c:37:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0; i < size / 2; i++)
      |                                ^~
exercises.c:44:1: error: expected identifier or ‘(’ before ‘return’
   44 | return 0;
      | ^~~~~~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘}’ token
   45 | }
      | ^
Compilation failed
f1160f0
Thu 14 Mar 2024 08:38:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0 ; i < (size / 2) ; i++)
      | ^~~
exercises.c:37:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0 ; i < (size / 2) ; i++)
      |                    ^
exercises.c:37:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0 ; i < (size / 2) ; i++)
      |                                    ^~
exercises.c:44:1: error: expected identifier or ‘(’ before ‘return’
   44 | return 0;
      | ^~~~~~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘}’ token
   45 | }
      | ^
Compilation failed
a48da13
Thu 14 Mar 2024 08:38:42 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0 ; i < size / 2 ; i++)
      | ^~~
exercises.c:37:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0 ; i < size / 2 ; i++)
      |                    ^
exercises.c:37:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0 ; i < size / 2 ; i++)
      |                                  ^~
exercises.c:44:1: error: expected identifier or ‘(’ before ‘return’
   44 | return 0;
      | ^~~~~~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘}’ token
   45 | }
      | ^
Compilation failed
84f6b60
Thu 14 Mar 2024 08:39:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for(int i = 0 ; i < size / 2 ; i++)
      | ^~~
exercises.c:37:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for(int i = 0 ; i < size / 2 ; i++)
      |                   ^
exercises.c:37:33: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for(int i = 0 ; i < size / 2 ; i++)
      |                                 ^~
exercises.c:44:1: error: expected identifier or ‘(’ before ‘return’
   44 | return temp;
      | ^~~~~~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘}’ token
   45 | }
      | ^
Compilation failed
e03d119
Thu 14 Mar 2024 08:40:53 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0 ; i < size / 2 ; i++)
      | ^~~
exercises.c:37:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0 ; i < size / 2 ; i++)
      |                    ^
exercises.c:37:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0 ; i < size / 2 ; i++)
      |                                  ^~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘return’
   45 | return temp;
      | ^~~~~~
exercises.c:46:1: error: expected identifier or ‘(’ before ‘}’ token
   46 | }
      | ^
Compilation failed
698ba2e
Thu 14 Mar 2024 08:41:34 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for(int i = 0 ; i < size/2 ; i++)
      | ^~~
exercises.c:37:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for(int i = 0 ; i < size/2 ; i++)
      |                   ^
exercises.c:37:31: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for(int i = 0 ; i < size/2 ; i++)
      |                               ^~
exercises.c:45:1: error: expected identifier or ‘(’ before ‘}’ token
   45 | }
      | ^
Compilation failed
3ad578a
Thu 14 Mar 2024 08:42:48 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0 ; i < size/2 ; i++)
      | ^~~
exercises.c:37:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0 ; i < size/2 ; i++)
      |                    ^
exercises.c:37:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0 ; i < size/2 ; i++)
      |                                ^~
exercises.c:46:1: error: expected identifier or ‘(’ before ‘}’ token
   46 | }
      | ^
Compilation failed
a46d11a
Thu 14 Mar 2024 08:44:11 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for(int i = 0 ; i < size/2 ; i++)
      | ^~~
exercises.c:37:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for(int i = 0 ; i < size/2 ; i++)
      |                   ^
exercises.c:37:31: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for(int i = 0 ; i < size/2 ; i++)
      |                               ^~
exercises.c:46:3: error: expected identifier or ‘(’ before ‘return’
   46 |   return temp;
      |   ^~~~~~
exercises.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
   48 | }
      | ^
Compilation failed
7d1e3a0
Thu 14 Mar 2024 08:46:11 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (int i = 0 ; i < size/2 ; i++)
      | ^~~
exercises.c:37:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (int i = 0 ; i < size/2 ; i++)
      |                    ^
exercises.c:37:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (int i = 0 ; i < size/2 ; i++)
      |                                ^~
exercises.c:46:1: error: expected identifier or ‘(’ before ‘}’ token
   46 | }
      | ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:7: error: unused variable ‘contador’ [-Werror=unused-variable]
   60 |   int contador = 0;
      |       ^~~~~~~~
exercises.c:58:8: error: unused variable ‘evenArr’ [-Werror=unused-variable]
   58 |   int *evenArr = (int *)malloc(size * sizeof(int));
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c46775e
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘for’
   37 | for (i = 0 ; i < size/2 ; i++)
      | ^~~
exercises.c:37:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   37 | for (i = 0 ; i < size/2 ; i++)
      |                ^
exercises.c:37:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   37 | for (i = 0 ; i < size/2 ; i++)
      |                            ^~
exercises.c:46:1: error: expected identifier or ‘(’ before ‘}’ token
   46 | }
      | ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:60:7: error: unused variable ‘contador’ [-Werror=unused-variable]
   60 |   int contador = 0;
      |       ^~~~~~~~
exercises.c:58:8: error: unused variable ‘evenArr’ [-Werror=unused-variable]
   58 |   int *evenArr = (int *)malloc(size * sizeof(int));
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5abf8de
